Fix slides module slide border cut off by slide image

--- a/elements/upfront-slider/css/uslider_settings.css
+++ b/elements/upfront-slider/css/uslider_settings.css
@@ -48,7 +48,7 @@
 	width:31%;
 	margin-left:2%;
 	float:left;
-	height: 45px;
+	height: 49px;
 	margin-bottom: 10px;
 }
 
